styles/social-icons.css
@import 'variables.css';
/* @require 'partials/project.css' */

@import '../node_modules/flickity/dist/flickity.css';

.lightcolor {
	color: var(--lightgrey);
}

.bluecolor {
	color: var(--blue);
}

.grid-carousel {
	position: relative;
	max-width: 25em;
	margin: 2.5% auto;
	
	&::before,
	&::after {
		content: '';
		position: absolute;
		top: 0;
		z-index: 2;
		height: 100%;
		width: 5%;
	}
	
	&::before {
		left: -1px;
		background-image: linear-gradient(to right, #ECEEF0, rgba(235, 238, 240, 0));
	}
	
	&::after {
		right: -1px;
		background-image: linear-gradient(to left, #ECEEF0, rgba(235, 238, 240, 0));
	}
}

.grid-item {
	max-height: 25em;
	max-width: 95%;
	padding: 0 2.5%;
}

.flickity-prev-next-button {
	width: 4em;
	height: 4em;
}

.download {
	transition: opacity 0.35s ease-out, transform 0.3s ease;
	width: auto;
	height: 2.75em;
	margin: 7.5% 1% 0;
	vertical-align: middle;
	
	@media (hover) {
	&:hover {
		transform: translateY(-8px);
	}
	
	&:active {
		transform: translateY(0);
		opacity: 0.65;
	}
	}
}

/* Medium */
@media (min-width: 35em) {
	
	/* Move paging icons over to either side of carousel. */
	.flickity-prev-next-button.next {
		right: calc(4em * -1 - 2.5%);
	}
	
	.flickity-prev-next-button.previous {
		left: calc(4em * -1 - 2.5%);
	}
}

/* Large */
@media (min-width: 50em) {
	.download {
		height: 4em;
		margin: 3.5% 2.5% 2.5%;
	}
}

/* XL */
@media (min-width: 65em) {
	.grid-carousel {
		max-width: 30em;
		
		&:before {
			left: calc(-2.5% - -1px);
		}
		
		&:after {
			right: calc(-2.5% - -1px);
		}
	}
	
	.grid-item {
		max-height: 30em;
		max-width: 30em;
	}
}

